Avancement sur page 2 puis ajout de composants

--- a/page2.html
+++ b/page2.html
@@ -7,11 +7,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="design/style.css">
-    <link rel="stylesheet" href="design/menu.css">
+    <link rel="stylesheet" href="design/sass/pages/menu.css">
     <title>La palette du goût</title>
 </head>
 <body>
-    <button>test</button>
+    <header>
+        <i class="fa-solid fa-arrow-left"></i>
+        <h1>ohmyfood</h1>
+    </header>
+
+    <footer>
+        <h3 class="titre">OhmyFood</h3>
+        <a href="#"><i class="fa-solid fa-utensils"></i> Proposez un restaurant</a>
+        <a href="#"><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</a>
+        <a href="#">Mentions Légales</a>
+        <a href="#">Contact</a>
+    </footer>
 </body>
 </html>
