--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
         </div>
     </section>
 
+    <!-- Liste des restaurants -->
     <section id="restaurants">
         <h2>Restaurants</h2>
             <div class="listeRestoContainer">
                 <div class="restoCard">
                     <div class="imageResto">
-                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image d'un plat">
                         <span class="new">Nouveau</span>
                     </div>
                     <div class="caption">
@@ -76,7 +77,7 @@
 
                 <div class="restoCard">
                     <div class="imageResto">
-                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
+                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image d'un plat">
                         <span class="new">Nouveau</span>
                     </div>
                     <div class="caption">
@@ -90,7 +91,7 @@
 
                 <div class="restoCard">
                     <div class="imageResto">
-                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
+                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image d'un plat">
                     </div>
                     <div class="caption">
                         <div>
@@ -103,7 +104,7 @@
 
                 <div class="restoCard">
                     <div class="imageResto">
-                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image d'un plat">
                     <div class="caption">
                         <div>
                             <h3>Le Délice des sens</h3>
@@ -116,6 +117,7 @@
 
     </section>
 
+<!-- footer -->
     <footer>
         <h3 class="titre">OhmyFood</h3>
         <a href="#"><i class="fa-solid fa-utensils"></i> Proposez un restaurant</a>
