--- a/page2.html
+++ b/page2.html
@@ -12,9 +12,22 @@
 </head>
 <body>
     <header>
-        <i class="fa-solid fa-arrow-left"></i>
+        <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <h1>ohmyfood</h1>
     </header>
+
+    <section id="imageResto">
+        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat du restaurant">
+    </section>
+
+    <section id="lesMenus">
+
+    </section>
+
+
+
+
+
 
     <footer>
         <h3 class="titre">OhmyFood</h3>
