--- a/page2.html
+++ b/page2.html
@@ -15,15 +15,16 @@
         <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <h1>ohmyfood</h1>
     </header>
-
-    <section id="imageResto">
-        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat du restaurant">
-    </section>
-
-    <section id="lesMenus">
-
-    </section>
-
+    <main>
+        <section id="imageResto">
+            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat du restaurant">
+        </section>
+    
+        <section id="lesMenus">
+    
+        </section>
+    </main>
+   
 
 
 
