ajustement des bordures, trait vert sous entrées, mise en place des flexbox sur les menus

--- a/page2.html
+++ b/page2.html
@@ -27,8 +27,8 @@
             </div>
             <div class="platWrapper">
                 <div class="typePlat">
-                <h2>Entrees</h2>
-                <span class="traitVert"></span>
+                <h2>Entrées</h2>
+                <div class="traitVert"></div>
                 </div>
                 <!-- <h2>Entrees</h2>
                 <span class="traitVert"></span> -->
