--- a/page2.html
+++ b/page2.html
@@ -38,7 +38,33 @@
                         <p>Au piment d'Espelette</p>
                     </div>
                     <div class="prixPlat">
-                        <p>25€</p>
+                        25€
+                    </div>
+                    <div class="animationPlat">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                </div>  
+
+                <div class="descriptionWrapper">
+                    <div class="descriptionPlat">
+                        <h3>Fricasseée d'escargot</h3>
+                        <p>Au piment d'Espelette</p>
+                    </div>
+                    <div class="prixPlat">
+                        25€
+                    </div>
+                    <div class="animationPlat">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                </div>  
+
+                <div class="descriptionWrapper">
+                    <div class="descriptionPlat">
+                        <h3>Fricasseée d'escargot</h3>
+                        <p>Au piment d'Espelette</p>
+                    </div>
+                    <div class="prixPlat">
+                        25€
                     </div>
                     <div class="animationPlat">
                         <i class="fa-solid fa-circle-check"></i>
