mise en place an,imation check, glissement haut

--- a/page2.html
+++ b/page2.html
@@ -34,24 +34,13 @@
                 <span class="traitVert"></span> -->
                 <div class="descriptionWrapper">
                     <div class="descriptionPlat">
-                        <h3>Fricasseée d'escargot</h3>
-                        <p>Au piment d'Espelette</p>
-                    </div>
-                    <div class="prixPlat">
-                        25€
-                    </div>
-                    <div class="animationPlat">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>  
-
-                <div class="descriptionWrapper">
-                    <div class="descriptionPlat">
-                        <h3>Fricasseée d'escargot</h3>
-                        <p>Au piment d'Espelette</p>
-                    </div>
-                    <div class="prixPlat">
-                        25€
+                        <div class="intitulePlat">
+                            <h3>Fricasseée d'escargot</h3>
+                            <p>Au piment d'Espelette</p>
+                        </div>
+                        <div class="prixPlat">
+                            25€
+                        </div>
                     </div>
                     <div class="animationPlat">
                         <i class="fa-solid fa-circle-check"></i>
@@ -60,17 +49,34 @@
 
                 <div class="descriptionWrapper">
                     <div class="descriptionPlat">
-                        <h3>Fricasseée d'escargot</h3>
-                        <p>Au piment d'Espelette</p>
-                    </div>
-                    <div class="prixPlat">
-                        25€
+                        <div class="intitulePlat">
+                            <h3>Fricasseée d'escargot</h3>
+                            <p>Au piment d'Espelette</p>
+                        </div>
+                        <div class="prixPlat">
+                            25€
+                        </div>
                     </div>
                     <div class="animationPlat">
                         <i class="fa-solid fa-circle-check"></i>
                     </div>
                 </div>  
-            </div>
+
+                <div class="descriptionWrapper">
+                    <div class="descriptionPlat">
+                        <div class="intitulePlat">
+                            <h3>Fricasseée d'escargot</h3>
+                            <p>Au piment d'Espelette</p>
+                        </div>
+                        <div class="prixPlat">
+                            25€
+                        </div>
+                    </div>
+                    <div class="animationPlat">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                </div>  
+              
            
         </section>
     </main>
