mise en place du loader

--- a/index.html
+++ b/index.html
@@ -13,11 +13,19 @@
 </head>
 
 <body>
+    <section id="loaderContainer">
+        <div class="loader"></div>  
+        <div class="textLoader">
+            <span>Chargement des entrées</span>
+            <span>Chargement des plats</span>
+            <span>Chargement des desserts</span>
+        </div>
+    </section>
     <!-- header -->
     <header>
         <h1>ohmyfood</h1>
     </header>
-
+    
     <!-- hero section -->
     <section id="hero">
         <div id="location">
