channgement timing loader et couerAnimé, mise en place des coeurs animés

--- a/page2.html
+++ b/page2.html
@@ -24,7 +24,7 @@
 
         <section id="lesMenus">
             <div class="nomResto">
-                <h2 class="titre">La palettte du goût</h2>
+                <h2 class="titre">La palette du goût</h2>
                 <i class="fa-regular fa-heart"></i>
             </div>
             <div class="platWrapper_Entrée">
@@ -35,7 +35,7 @@
                 <div class="descriptionWrapper">
                     <div class="descriptionPlat">
                         <div class="intitulePlat">
-                            <h3>Fricasseée d'escargot</h3>
+                            <h3>Fricasseé d'escargot</h3>
                             <p>Au piment d'Espelette</p>
                         </div>
                         <div class="prixPlat">
@@ -187,17 +187,6 @@
 
 
     </main>
-
-
-        <div class="fa-stack">
-                <i class="fa-regular fa-heart fa-stack"></i>
-                <i class="fa-solid fa-heart fa-stack fa-inverse"></i>
-        </div>
-
-
-
-
-
     <footer>
         <h3 class="titre">OhmyFood</h3>
         <a href="#"><i class="fa-solid fa-utensils"></i> Proposez un restaurant</a>
