--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 
 <body>
     <section id="loaderContainer">
-        <div class="loader"></div>  
+        <div class="loader"></div>
         <div class="textLoader">
-            <span>Chargement des entrées</span>
-            <span>Chargement des plats</span>
-            <span>Chargement des desserts</span>
+            <span>Préparation des entrées</span>
+            <span>Dressage des plats</span>
+            <span>Selection des desserts</span>
         </div>
     </section>
     <!-- header -->
     <header>
         <h1>ohmyfood</h1>
     </header>
-    
+
     <!-- hero section -->
     <section id="hero">
         <div id="location">
@@ -34,7 +34,7 @@
         </div>
         <div id="restaurauntsExploration">
             <div>
-                <h2>Réservez le menu qui vous convient<h2> 
+                <h2>Réservez le menu qui vous convient<h2>
             </div>
             <div>
                 <p>Découvrez des restaurants d'exception,<br> selectionnés par nos soins.</p>
@@ -68,7 +68,8 @@
     <!-- Liste des restaurants -->
     <section id="restaurants">
         <h2>Restaurants</h2>
-            <div class="listeRestoContainer">
+        <div class="listeRestoContainer">
+            <a href="page2.html"></ahref>
                 <div class="restoCard">
                     <div class="imageResto">
                         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image d'un plat">
@@ -77,55 +78,68 @@
                     <div class="caption">
                         <div>
                             <h3>La Palette du Goût</h3>
-                        <p>Ménilmontant</p>
+                            <p>Ménilmontant</p>
                         </div>
-                        <i class="fa-regular fa-heart"></i>
+                        <div class="fa-stack">
+                            <i class="fa-regular fa-heart fa-stack"></i>
+                            <i class="fa-solid fa-heart fa-stack fa-inverse"></i>
+                        </div>
                     </div>
                 </div>
-
-                <div class="restoCard">
-                    <div class="imageResto">
-                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image d'un plat">
-                        <span class="new">Nouveau</span>
-                    </div>
-                    <div class="caption">
-                        <div>
-                            <h3>La note enchantée</h3>
+            </a>
+            <div class="restoCard">
+                <div class="imageResto">
+                    <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image d'un plat">
+                    <span class="new">Nouveau</span>
+                </div>
+                <div class="caption">
+                    <div>
+                        <h3>La note enchantée</h3>
                         <p>Charonne</p>
-                        </div>
-                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="fa-stack">
+                        <i class="fa-regular fa-heart fa-stack"></i>
+                        <i class="fa-solid fa-heart fa-stack fa-inverse"></i>
                     </div>
                 </div>
+            </div>
 
-                <div class="restoCard">
-                    <div class="imageResto">
-                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image d'un plat">
-                    </div>
-                    <div class="caption">
-                        <div>
-                            <h3>À la française</h3>
+            <div class="restoCard">
+                <div class="imageResto">
+                    <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image d'un plat">
+                </div>
+                <div class="caption">
+                    <div>
+                        <h3>À la française</h3>
                         <p>Cité Rouge</p>
-                        </div>
-                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="fa-stack">
+                        <i class="fa-regular fa-heart fa-stack"></i>
+                        <i class="fa-solid fa-heart fa-stack fa-inverse"></i>
                     </div>
                 </div>
+            </div>
 
-                <div class="restoCard">
-                    <div class="imageResto">
-                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image d'un plat">
+            <div class="restoCard">
+                <div class="imageResto">
+                    <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                        alt="image d'un plat">
                     <div class="caption">
                         <div>
                             <h3>Le Délice des sens</h3>
-                        <p>Folie-Méricourt</p>
+                            <p>Folie-Méricourt</p>
                         </div>
-                        <i class="fa-regular fa-heart"></i>
+                        <div class="fa-stack">
+                            <i class="fa-regular fa-heart fa-stack"></i>
+                            <i class="fa-solid fa-heart fa-stack fa-inverse"></i>
+                        </div>
                     </div>
 
-            </div>
+                </div>
 
     </section>
 
-<!-- footer -->
+    <!-- footer -->
     <footer>
         <h3 class="titre">OhmyFood</h3>
         <a href="#"><i class="fa-solid fa-utensils"></i> Proposez un restaurant</a>
