placement du coeur sur les pages menu

--- a/page2.html
+++ b/page2.html
@@ -25,7 +25,10 @@
         <section id="lesMenus">
             <div class="nomResto">
                 <h2 class="titre">La palette du goût</h2>
-                <i class="fa-regular fa-heart"></i>
+                <div class="fa-stack">
+                    <i class="fa-regular fa-heart fa-stack"></i>
+                    <i class="fa-solid fa-heart fa-stack fa-inverse"></i>
+                </div>
             </div>
             <div class="platWrapper_Entrée">
                 <div class="typePlat">
@@ -180,11 +183,10 @@
 
 
 
-                    <!-- <button>
+                    <button>
                             commander
-                        </button> -->
+                        </button>
         </section>
-
 
     </main>
     <footer>
