--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <section id="restaurants">
         <h2>Restaurants</h2>
         <div class="listeRestoContainer">
-            <a href="page2.html"></ahref>
+            <a href="laPaletteDuGout.html"></ahref>
                 <div class="restoCard">
                     <div class="imageResto">
                         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image d'un plat">
