--- a/laPaletteDuGout.html
+++ b/laPaletteDuGout.html
@@ -53,11 +53,11 @@
                 <div class="descriptionWrapper">
                     <div class="descriptionPlat">
                         <div class="intitulePlat">
-                            <h3>Fricasseée d'escargot</h3>
-                            <p>Au piment d'Espelette</p>
+                            <h3>Foie gras de canard mi-cuit</h3>
+                            <p>Et ses copeaux de truffe noire</p>
                         </div>
                         <div class="prixPlat">
-                            25€
+                            35€
                         </div>
                     </div>
                     <div class="animationPlat">
@@ -68,11 +68,11 @@
                 <div class="descriptionWrapper">
                     <div class="descriptionPlat">
                         <div class="intitulePlat">
-                            <h3>Fricasseée d'escargot</h3>
-                            <p>Au piment d'Espelette</p>
+                            <h3>Oeuf au plat</h3>
+                            <p>Assaisonné à la truffe sur lit de caviar</p>
                         </div>
                         <div class="prixPlat">
-                            25€
+                            20€
                         </div>
                     </div>
                     <div class="animationPlat">
@@ -89,11 +89,11 @@
                 <div class="descriptionWrapper">
                     <div class="descriptionPlat">
                         <div class="intitulePlat">
-                            <h3>Fricasseée d'escargot</h3>
-                            <p>Au piment d'Espelette</p>
+                            <h3>Filet de boeuf aux herbes</h3>
+                            <p>Accompagné de sa ribambelle de légumes</p>
                         </div>
                         <div class="prixPlat">
-                            25€
+                            40€
                         </div>
                     </div>
                     <div class="animationPlat">
@@ -104,11 +104,11 @@
                 <div class="descriptionWrapper">
                     <div class="descriptionPlat">
                         <div class="intitulePlat">
-                            <h3>Fricasseée d'escargot</h3>
-                            <p>Au piment d'Espelette</p>
+                            <h3>Parmentier de queue de boeuf</h3>
+                            <p>À la truffe noire sur sa purée de panais</p>
                         </div>
                         <div class="prixPlat">
-                            25€
+                            35€
                         </div>
                     </div>
                     <div class="animationPlat">
@@ -119,11 +119,11 @@
                 <div class="descriptionWrapper">
                     <div class="descriptionPlat">
                         <div class="intitulePlat">
-                            <h3>Fricasseée d'escargot</h3>
-                            <p>Au piment d'Espelette</p>
+                            <h3>Filet de turbot</h3>
+                            <p>Aux agrumes</p>
                         </div>
                         <div class="prixPlat">
-                            25€
+                            44€
                         </div>
                     </div>
                     <div class="animationPlat">
@@ -139,11 +139,11 @@
                     <div class="descriptionWrapper">
                         <div class="descriptionPlat">
                             <div class="intitulePlat">
-                                <h3>Fricasseée d'escargot</h3>
-                                <p>Au piment d'Espelette</p>
+                                <h3>Paris-Brest</h3>
+                                <p>Revisité</p>
                             </div>
                             <div class="prixPlat">
-                                25€
+                                18€
                             </div>
                         </div>
                         <div class="animationPlat">
@@ -154,11 +154,11 @@
                     <div class="descriptionWrapper">
                         <div class="descriptionPlat">
                             <div class="intitulePlat">
-                                <h3>Fricasseée d'escargot</h3>
-                                <p>Au piment d'Espelette</p>
+                                <h3>Macaron au chocolat d'exception </h3>
+                                <p>Et glace à la vanille de Madagascar</p>
                             </div>
                             <div class="prixPlat">
-                                25€
+                                22€
                             </div>
                         </div>
                         <div class="animationPlat">
@@ -169,11 +169,11 @@
                     <div class="descriptionWrapper">
                         <div class="descriptionPlat">
                             <div class="intitulePlat">
-                                <h3>Fricasseée d'escargot</h3>
-                                <p>Au piment d'Espelette</p>
+                                <h3>Mousse au chocolat </h3>
+                                <p>Au piment d'Espelette et à la truffe noire</p>
                             </div>
                             <div class="prixPlat">
-                                25€
+                                23€
                             </div>
                         </div>
                         <div class="animationPlat">
@@ -206,52 +206,3 @@
 
 
 
-<!-- <div class="platWrapper">
-    <div class="typePlat">
-    <h2>Entrées</h2>
-    <div class="traitVert"></div>
-    </div>
-    <div class="descriptionWrapper">
-        <div class="descriptionPlat">
-            <div class="intitulePlat">
-                <h3>Fricasseée d'escargot</h3>
-                <p>Au piment d'Espelette</p>
-            </div>
-            <div class="prixPlat">
-                25€
-            </div>
-        </div>
-        <div class="animationPlat">
-            <i class="fa-solid fa-circle-check"></i>
-        </div>
-    </div>  
-
-    <div class="descriptionWrapper">
-        <div class="descriptionPlat">
-            <div class="intitulePlat">
-                <h3>Fricasseée d'escargot</h3>
-                <p>Au piment d'Espelette</p>
-            </div>
-            <div class="prixPlat">
-                25€
-            </div>
-        </div>
-        <div class="animationPlat">
-            <i class="fa-solid fa-circle-check"></i>
-        </div>
-    </div>  
-
-    <div class="descriptionWrapper">
-        <div class="descriptionPlat">
-            <div class="intitulePlat">
-                <h3>Fricasseée d'escargot</h3>
-                <p>Au piment d'Espelette</p>
-            </div>
-            <div class="prixPlat">
-                25€
-            </div>
-        </div>
-        <div class="animationPlat">
-            <i class="fa-solid fa-circle-check"></i>
-        </div>
-    </div>   -->
