creation page à la francaise

--- a/index.html
+++ b/index.html
@@ -103,22 +103,24 @@
                     </div>
                 </div>
             </div>
-
-            <div class="restoCard">
-                <div class="imageResto">
-                    <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image d'un plat">
-                </div>
-                <div class="caption">
-                    <div>
-                        <h3>À la française</h3>
-                        <p>Cité Rouge</p>
+            <a href="aLaFrancaise.html">
+                <div class="restoCard">
+                    <div class="imageResto">
+                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image d'un plat">
                     </div>
-                    <div class="fa-stack">
-                        <i class="fa-regular fa-heart fa-stack"></i>
-                        <i class="fa-solid fa-heart fa-stack fa-inverse"></i>
+                    <div class="caption">
+                        <div>
+                            <h3>À la française</h3>
+                            <p>Cité Rouge</p>
+                        </div>
+                        <div class="fa-stack">
+                            <i class="fa-regular fa-heart fa-stack"></i>
+                            <i class="fa-solid fa-heart fa-stack fa-inverse"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </a>
+           
 
             <div class="restoCard">
                 <div class="imageResto">
