responsive page accueil

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="design/sass/pages/style.css">
+    <link rel="stylesheet" href="design/sass/responsive/responsive.css">
     <title>OhmyFood</title>
 </head>
 
 <body>
+    <!-- mise en place du loader -->
     <section id="loaderContainer">
         <div class="loader"></div>
         <div class="textLoader">
@@ -70,7 +72,7 @@
         <h2>Restaurants</h2>
         <div class="listeRestoContainer">
 
-            <a href="laPaletteDuGout.html"></ahref>
+            <a href="laPaletteDuGout.html">
                 <div class="restoCard">
                     <div class="imageResto">
                         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image d'un plat">
@@ -142,6 +144,7 @@
                             </div>
                         </div>
                     </div>
+                </div>
             </a>
            
 
