--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <a href="#"><i class="fa-solid fa-utensils"></i> Proposez un restaurant</a>
         <a href="#"><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</a>
         <a href="#">Mentions Légales</a>
-        <a href="maito:ohmyfood@ohmyfood.fr">Contact</a>
+        <a href="mailto:ohmyfood@ohmyfood.com">Contact</a>
     </footer>
 
 
