--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
 <body>
     <!-- mise en place du loader -->
-    <section id="loaderContainer">
+    <div id="loaderContainer">
         <div class="loader"></div>
         <div class="textLoader">
             <span>Préparation des entrées</span>
             <span>Dressage des plats</span>
             <span>Selection des desserts</span>
         </div>
-    </section>
+    </div>
     <!-- header -->
     <header>
         <h1>ohmyfood</h1>
@@ -36,7 +36,7 @@
         </div>
         <div id="restaurauntsExploration">
             <div>
-                <h2>Réservez le menu qui vous convient<h2>
+                <h2>Réservez le menu qui vous convient</h2>
             </div>
             <div>
                 <p>Découvrez des restaurants d'exception,<br> selectionnés par nos soins.</p>
@@ -146,8 +146,7 @@
                     </div>
                 </div>
             </a>
-           
-
+        </div>
     </section>
 
     <!-- footer -->
