--- a/laNoteEnchantee.html
+++ b/laNoteEnchantee.html
@@ -20,9 +20,9 @@
         <h1>ohmyfood</h1>
     </header>
     <main>
-        <section id="imageResto">
+        <div id="imageResto">
             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat du restaurant">
-        </section>
+        </div>
         <!-- mise en place de la section menu -->
         <section id="lesMenus">
             <div class="nomResto">
